deployments/kustomize/overlays/openshift/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-db-ingress
  app.kubernetes.io/name: database-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: naad
      app.kubernetes.io/name: database
      app.kubernetes.io/component: database
  ingress:
    - ports:
        - protocol: TCP
          port: 3306
  policyTypes:
    - Ingress
